Fix event list alignment and font sizes in the sidebar.

--- a/css/src/_event.scss
+++ b/css/src/_event.scss
@@ -2,7 +2,6 @@
 
 .event {
 	.event-header {
-
 		@include respond-to( 600px ) {
 			display: flex;
   		}
@@ -169,33 +168,53 @@
 .event-list {
 	.event {
 		position: relative;
-		padding-left: 100px;
-		padding-bottom: 30px;
+		padding-left: 70px;
+		padding-bottom: 20px;
+
+		@include respond-to( 1024px ) {
+			padding-left: 100px;
+			padding-bottom: 30px;
+		}
 
 		.event-date {
 			position: absolute;
 			left: 0;
 			top: 0;
-			width: 80px;
 			border: 3px solid rgba( $grey, .3 );
 			color: $navy;
-			padding: 10px 0 0 0 ;
+			width: 50px;
+			padding: 10px 0 0 0;
+
+			@include respond-to( 1024px ) {
+				width: 80px;
+				padding: 10px 0 0 0;
+			}
 
 			.event-date-month {
 				@include font-title;
-				font-size: 20px;
-				line-height: 20px;
 				text-align: center;
 				display: block;
 				text-transform: uppercase;
+				font-size: 14px;
+				line-height: 14px;
+
+				@include respond-to ( 1024px ) {
+					font-size: 20px;
+					line-height: 20px;
+				}
 			}
 
 			.event-date-day {
 				@include font-title;
-				font-size: 50px;
-				line-height: 50px;
 				text-align: center;
 				display: block;
+				font-size: 30px;
+				line-height: 30px;
+
+				@include respond-to( 1024px ) {
+					font-size: 50px;
+					line-height: 50px;
+				}
 			}
 		}
 
