--- a/css/src/_sidebar.scss
+++ b/css/src/_sidebar.scss
@@ -68,6 +68,7 @@
 
 	.event-list {
 		padding-bottom: 20px;
+		padding-top: 20px;
 	}
 }
 
